--- a/printer/README
+++ b/printer/README
@@ -5,9 +5,4 @@ To build:
   The script run_me.sh compiles and installs an LLVM-based compiler that includes your CAT in the directory ~/CAT
 
 To run:
-  1) Add your compiler cat-c in your PATH (i.e., export PATH=~/CAT/bin:$PATH)
-
-  2) Invoke your compiler to compile a C program. For example
-    $ cat-c program_to_analyse.c -o mybinary
-    $ cat-c -O3 program_to_analyse.c -o mybinary
-    $ cat-c -O0 program_to_analyse.bc -o mybinary
+  opt -load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/PDGPrinter.so -disable-output -PDGPrinter test.bc
