--- a/TODO
+++ b/TODO
@@ -3,3 +3,7 @@ Simplifcations:
   TODO: do not change what you are iterating over (i.e., cache the list of functions before modifying them)
 
 - there is no memory data dependences (pop for synchronization is missing)
+
+- assume straight line of code within the loop body
+
+- assume single basic block as header
