Updated the README file

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 == PREREQUISITES ==
 LLVM 5.0.0
+GCC that supports C++ 14
 
-To enable it on the Zythos cluster: source /project/llvm/5.0.0/enable
+To enable them on the Zythos cluster: 
+  - source /project/llvm/5.0.0/enable
+  - source /opt/rh/devtoolset-6/enable
