--- a/TODO
+++ b/TODO
@@ -1,13 +1,7 @@
 - Print internal nodes of an SCC (the print method of the class SCC) following their dependences
 
-- add the normalization from do-while to while loops
-
-- add tests related to control flows
-
 - test DSWP on real workloads using the autotuning exploration
 
-- Optimization 1: exploit induction variables to avoid unnecessary synchronizations
+- Optimization: prune the CFG of the generated functions as much as we can
 
-- Optimization 2: prune the CFG of the generated functions as much as we can
-
-- Optimization 3: packing/unpacking pushes and pops
+- Optimization: packing/unpacking pushes and pops
