Minor: doall, todo: add a task highlighting a bugfix in DOALL Builder

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@
 
 
 ==== DOALL
+- BUGFIX: Swap outer and inner loops (See Builder.cpp:78)
 - Promote chunk size to be an option (e.g., --doall-chunksize)
 
 
