--- a/passes/parallelization_technique/README
+++ b/passes/parallelization_technique/README
@@ -1,13 +1,39 @@
-This is the template to use for assignments of the Code Analysis and Transformation class at Northwestern
+Creating a Parallelization Technique
+==========================
 
-To build: 
-  Compile and install your code by invoking ./run_me.sh
-  The script run_me.sh compiles and installs an LLVM-based compiler that includes your CAT in the directory ~/CAT
+Constructing a new parallelization technique using this
+abstract class is made straightforward by the fairly
+linear nature in which parallelized execution is generated.
 
-To run:
-  1) Add your compiler cat-c in your PATH (i.e., export PATH=~/CAT/bin:$PATH)
+Below are the steps all techniques share in common, and
+the process by which APIs in ParallelizationTechnique
+are used to satisfy those steps
 
-  2) Invoke your compiler to compile a C program. For example
-    $ cat-c program_to_analyse.c -o mybinary
-    $ cat-c -O3 program_to_analyse.c -o mybinary
-    $ cat-c -O0 program_to_analyse.bc -o mybinary
+Technique Construction Steps
+--------------------------
+1) Initialization of users, or workers as the API calls them
+  that perform parallelized execution
+2) Initialization of the environment those workers interact with
+3) Cloning loop portions inside the worker's execution (its function)
+4) Linking the environment into each worker's cloned execution
+5) Adjusting data flow between cloned instructions to reference
+  other cloned instructions and/or environment loaded variables
+
+Workers
+--------------------------
+Think of these as thread executions. They are spawned by a
+dispatcher that passes them an environment to execute within,
+to load and store loop live values they interact with, for the
+purpose of divvy-ing up work needed to mimic the original loop.
+
+Environment
+--------------------------
+The environment is an allocated array in the function holding the
+original loop. This array stores loop live-in values and presents
+space for workers to store loop live-out values that can be used
+instead of the original loop's live-out variables.
+
+Loop Cloning/Data Flow
+--------------------------
+Either the whole loop, or a portion (some subset of the instructions)
+can be cloned into each worker.
