--- a/TODO
+++ b/TODO
@@ -1,12 +1,21 @@
 ==== SOFTWARE ENGINEERING
-- Reconsider all abstractions (e.g., do we need all LoopSummary, LoopInfoSummary, and LoopDependenceInfo? do we need SCCEdgeInfo?)
-
 - Create a "Dependence" abstraction, which is DG<Value>
   - have methods like "getSource(), getDestination(), isMemoryBased()"
 
+- Extract function order in call graph that is memoized in DGSimplify for use
+  elsewhere (in Parallelization currently)
+  - The data structures in question: 
+    parentFns, childrenFns, orderedCalled, preOrderedLoops
+  - Consolidate LoopSummary * generated in this ordering with LoopInfoSummary
+
+- Output results indexed by the above memoization for debug purposes, as well
+  as to use in more advanced regression tests
+  - Instead of just program correctness, tests can ensure certain loops are
+    parallelized using a specific parallelization scheme
+
+
 ==== Renaming
 generateStagesFromPartitionedSCCs -> generatePipelineStagesFromPartitionedSCCDAG
-
 
 ==== Parallelizer
 - Modify parallelizer to be able to parallelize multiple loops nested to each other at the same time
@@ -28,8 +37,6 @@ generateStagesFromPartitionedSCCs -> generatePipelineStagesFromPartitionedSCCDAG
 - Create a new pass to map memory locations to variables as much as possible
   This removes the overly conservative memory loop-carried data dependences
 
-
-Task log - Angelo
-  - clean up analysis classes (SCCDAGAttrs, SimpleIVInfo, ...)
-  PropagateLiveOuts -> GenerateCodeToLoadLiveOutVars
-  PopulateEnvironment -> GenerateCodeTOCreateEnvironment
+==== PDG ALIAS ANALYSIS LIMITATIONS
+- Non-pointer struct values alias with primitive arrays
+- Primitive arrays stored and used in a struct
