Added the notion of commutativity to DGEdgeBase<T>. PDGAnalysis now marks any commutative edges given by the commutative dependence analysis pass.
Modified CommutativeDepAnalysis to fit that the PDGAnalysis pass marking
commutative edges.

--- a/passes/pdg/README
+++ b/passes/pdg/README
@@ -30,3 +30,7 @@ Implementation
     NOTE: PDGAnalysis has minor built-in heuristics to trim overly-conservative
     edges from the dependence graph. These heuristics will soon be moved to a
     separate pass altogether to allow for toggling their use
+
+
+Depends on these passes:
+  unique_ir_marker, oracle_aa, commutative_dependence_analysis, parallelization_utilities, alloc_aa, talkdown
