Started improving previous data structures: LoopInfoSummary

--- a/src/parallelization_utilities/README
+++ b/src/parallelization_utilities/README
@@ -1,5 +1,5 @@
 Helpers: Parallelization, SCCDAGAttrs, SCCDAGPartition, Queue
-Data Structures: LoopDependenceInfo, LoopEnvironment, LoopInfoSummary
+Data Structures: LoopDependenceInfo, LoopEnvironment, LoopsInfoSummary
 
 Implementation
   Parallelization
