Renamed LoopsInfoSummary into LoopsSummary

--- a/src/parallelization_utilities/README
+++ b/src/parallelization_utilities/README
@@ -1,5 +1,5 @@
 Helpers: Parallelization, SCCDAGAttrs, SCCDAGPartition, Queue
-Data Structures: LoopDependenceInfo, LoopEnvironment, LoopsInfoSummary
+Data Structures: LoopDependenceInfo, LoopEnvironment, LoopsSummary
 
 Implementation
   Parallelization
